--- a/src/elements/searchField/searchField.module.scss
+++ b/src/elements/searchField/searchField.module.scss
@@ -1,5 +1,4 @@
 .searchField {
-  width: 100vw;
   height: auto;
   display: flex;
   flex-direction: column;
